# FSM-Simulator

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  ConcreteState.cpp  ConcreteState.h  EndCommand.cpp  EndCommand.h  FSM.cpp  FSM.h  IncrementCommand.cpp  IncrementCommand.h  JumpCommand.cpp  JumpCommand.h  Parameters.cpp  Parameters.h  Parser.h  PrintCommand.cpp  PrintCommand.h  State.cpp  State.h  StateFactory.cpp  StateFactory.h  TransitionTable.cpp  TransitionTable.h  WaitForInputCommand.cpp  WaitForInputCommand.h  a.out  fsm.fsm  main.cpp  parser.hpp  tags  test.fsm
